# Geometry_Aware_CMR_Pretraining

./: README.md  pyproject.toml  requirements.txt
downstream_stage/interplane_recon/: probe_interplane_recon.py
downstream_stage/interplane_recon/config/: interplane_recon.yaml
downstream_stage/probing/: main_finetune.py  modeling_finetune.py  visualize_voxel_probe.py
downstream_stage/probing/config/: probing.yaml
downstream_stage/seg/: engine_for_segmentation.py  inference_sliding_window.py  main_segmentation.py  modeling_segementation.py
downstream_stage/seg/config/: segmentation.yaml
downstream_stage/seg/decoder/: unetr_decoder.py  vol_seg_decoder.py
optim/: optim_factory.py
pretrain_stage/: engine_for_pretraining.py  main_pretrain.py  modeling_pretrain.py
pretrain_stage/config/: pretrain.yaml
utils/: data_related.py  misc.py
